# catenaconf

./: .coverage  .coveragerc  .gitignore  README-pkg.md  README-zh.md  README.md  config.xml  pyproject.toml  setup.py  t.py  test.py
.github/workflows/: main.yaml
catenaconf/: ops.py
catenaconf/catena_config/: __init__.py  dictconfig.py  kvconfig.py
tests/: test.py  test_config.py
