[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catenaconf"
version = "0.1.0"
description = "A configuration management library"
authors = [
    { name="Jianqing Wang", email="18353419066@163.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { "Source" = "https://github.com/Asianfleet/catenaconf" }
